--- a/angular.json
+++ b/angular.json
@@ -100,7 +100,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/preline/preline.js"
+            ]
           }
         }
       }
