--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@fullcalendar/angular": "^6.1.15",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "preline": "^2.3.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
