--- a/angular.json
+++ b/angular.json
@@ -98,6 +98,7 @@
               }
             ],
             "styles": [
+              "node_modules/preline/dist/preline.css",
               "src/styles.scss"
             ],
             "scripts": [
